--- a/src/assets/stylesheets/bluebutton.css
+++ b/src/assets/stylesheets/bluebutton.css
@@ -1,7 +1,7 @@
 .button{
     -fx-alignment: center;
     -fx-background-color: black;
-    -fx-background-image: url("../../../assets/led/ledBlue.gif");
+    -fx-background-image: url("../images/led/ledBlue.gif");
     -fx-background-repeat:no-repeat;
     -fx-background-size: 100%;
 }
