--- a/src/assets/stylesheets/carrier.css
+++ b/src/assets/stylesheets/carrier.css
@@ -1,7 +1,7 @@
 .button{
     -fx-alignment: center;
     -fx-background-color: transparent;
-    -fx-background-image: url("../../../assets/ship/carrier.png");
+    -fx-background-image: url("../images/ship/carrier.png");
     -fx-background-repeat:no-repeat;
     -fx-background-size: 100%;
     -fx-max-width: infinity;
