--- a/src/assets/stylesheets/fxmlsettings.css
+++ b/src/assets/stylesheets/fxmlsettings.css
@@ -1,5 +1,5 @@
 .mainFxmlClass {
- -fx-background-image: url("../../../assets/water/Ocean2.gif");
+ -fx-background-image: url("../images/water/Ocean2.gif");
  -fx-background-size: 100% 100%;
 }
 
