--- a/src/assets/stylesheets/mainmenu.css
+++ b/src/assets/stylesheets/mainmenu.css
@@ -1,5 +1,5 @@
 #AnchorPane{
- -fx-background-image: url("../../../assets/water/Ocean2.gif");
+ -fx-background-image: url("../images/water/Ocean2.gif");
  -fx-background-size: 100% 100%;
 }
 #signInButton{
