--- a/src/battleship/views/FXMLGoogleSignIn.fxml
+++ b/src/battleship/views/FXMLGoogleSignIn.fxml
@@ -7,8 +7,8 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" styleClass="mainFxmlClass" xmlns:fx="http://javafx.com/fxml/1" fx:controller="battleship.Controllers.FXMLGoogleSignInController">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" styleClass="mainFxmlClass" xmlns:fx="http://javafx.com/fxml/1" fx:controller="battleship.controllers.FXMLGoogleSignInController">
     <stylesheets>
-        <URL value="@fxmlgooglesignin.css"/>
+        <URL value="@@../../assets/stylesheets/fxmlgooglesignin.css"/>
     </stylesheets>
 </AnchorPane>
