--- a/src/battleship/views/FXMLResume.fxml
+++ b/src/battleship/views/FXMLResume.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" styleClass="mainFxmlClass" stylesheets="@../Stylesheets/fxmlresume.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="battleship.Controllers.FXMLResumeController">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" styleClass="mainFxmlClass" stylesheets="@../../assets/stylesheets/fxmlresume.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="battleship.controllers.FXMLResumeController">
    <children>
       <Label alignment="CENTER" prefHeight="400.0" prefWidth="600.0" text="Resume!">
          <font>
