--- a/src/battleship/views/FXMLSettings.fxml
+++ b/src/battleship/views/FXMLSettings.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="anchorPane" prefHeight="400.0" prefWidth="600.0" styleClass="mainFxmlClass" stylesheets="@../Stylesheets/fxmlsettings.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="battleship.Controllers.FXMLSettingsController">
+<AnchorPane id="anchorPane" prefHeight="400.0" prefWidth="600.0" styleClass="mainFxmlClass" stylesheets="@../../assets/stylesheets/fxmlsettings.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="battleship.controllers.FXMLSettingsController">
    <children>
       <GridPane fx:id="soundSettingsGridPane" alignment="CENTER" prefHeight="250.0" prefWidth="250.0">
         <columnConstraints>
