--- a/src/assets/stylesheets/carrier.css
+++ b/src/assets/stylesheets/carrier.css
@@ -3,7 +3,36 @@
     -fx-background-color: transparent;
     -fx-background-image: url("../images/ship/carrier.png");
     -fx-background-repeat:no-repeat;
-    -fx-background-size: 100%;
+    -fx-background-size: 100% 100%;
     -fx-max-width: infinity;
     -fx-max-height: infinity;
+}
+#carrier1 {
+    -fx-background-image: url("../images/ship/carrier1.png");
+    -fx-background-size: 100% 100%;
+    -fx-background-repeat:no-repeat;
+    -fx-max-width: infinity;
+    -fx-max-height: infinity;
+}
+#carrier2 {
+    -fx-background-image: url("../images/ship/carrier2.png");
+    -fx-background-size: 100% 100%;
+    -fx-background-repeat:no-repeat;
+    -fx-max-width: infinity;
+    -fx-max-height: infinity;
+}
+#carrier3 {
+    -fx-background-image: url("../images/ship/carrier3.png");
+    -fx-background-size: 100% 100%;
+    -fx-background-repeat:no-repeat;
+}
+#carrier4 {
+    -fx-background-image: url("../images/ship/carrier4.png");
+    -fx-background-size: 100% 100%;
+    -fx-background-repeat:no-repeat;
+}
+#carrier5 {
+    -fx-background-image: url("../images/ship/carrier5.png");
+    -fx-background-size: 100% 100%;
+    -fx-background-repeat:no-repeat;
 }
