--- a/src/assets/stylesheets/bottomgrid.css
+++ b/src/assets/stylesheets/bottomgrid.css
@@ -1,9 +1,52 @@
 .button{
-    -fx-alignment: center;
-    -fx-background-color: transparent;
     -fx-background-image: url("../images/grid/bottomSector.png");
+    -fx-background-size: 100% 100%;
     -fx-background-repeat:no-repeat;
-    -fx-background-size: 100%;
-    -fx-max-width: infinity;
-    -fx-max-height: infinity;
+    -fx-background-color: transparent;
 }
+#battleship1{
+    -fx-background-image: url("../images/ship/Pseudo-Battleship1.png");
+    -fx-background-size: 100% 100%;
+    -fx-background-repeat:no-repeat;
+}
+#battleship2{
+    -fx-background-image: url("../images/ship/Pseudo-Battleship2.png");
+    -fx-background-size: 100% 100%;
+    -fx-background-repeat:no-repeat;
+}
+#battleship3{
+    -fx-background-image: url("../images/ship/Pseudo-Battleship3.png");
+    -fx-background-size: 100% 100%;
+    -fx-background-repeat:no-repeat;
+}
+#battleship4{
+    -fx-background-image: url("../images/ship/Pseudo-Battleship4.png");
+    -fx-background-size: 100% 100%;
+    -fx-background-repeat:no-repeat;
+}
+#carrier1 {
+    -fx-background-image: url("../images/ship/carrier1.png");
+    -fx-background-size: 100% 100%;
+    -fx-background-repeat:no-repeat;
+}
+#carrier2 {
+    -fx-background-image: url("../images/ship/carrier2.png");
+    -fx-background-size: 100% 100%;
+    -fx-background-repeat:no-repeat;
+}
+#carrier3 {
+    -fx-background-image: url("../images/ship/carrier3.png");
+    -fx-background-size: 100% 100%;
+    -fx-background-repeat:no-repeat;
+}
+#carrier4 {
+    -fx-background-image: url("../images/ship/carrier4.png");
+    -fx-background-size: 100% 100%;
+    -fx-background-repeat:no-repeat;
+}
+#carrier5 {
+    -fx-background-image: url("../images/ship/carrier5.png");
+    -fx-background-size: 100% 100%;
+    -fx-background-repeat:no-repeat;
+}
+
