--- a/src/battleship/views/FXMLPlay.fxml
+++ b/src/battleship/views/FXMLPlay.fxml
@@ -290,6 +290,7 @@
         </columnConstraints>
         <rowConstraints>
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
             <Button fx:id="main" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#returnMainMenu" text="Main Menu">
@@ -297,6 +298,7 @@
                   <Insets bottom="5.0" top="5.0" />
                </GridPane.margin>
             </Button>
+            <Button fx:id="explosion" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Explosion" GridPane.rowIndex="1" />
          </children>
       </GridPane>
       <GridPane fx:id="allCarrierV" layoutX="-140.0" layoutY="338.0" stylesheets="@../../assets/stylesheets/carrier.css">
