--- a/src/assets/stylesheets/battleship.css
+++ b/src/assets/stylesheets/battleship.css
@@ -11,7 +11,7 @@ and open the template in the editor.
 .button{
     -fx-alignment: center;
     -fx-background-color: transparent;
-    -fx-background-image: url("../images/ship/Pseudo-Battleship.png");
+    -fx-background-image: url("../images/ship/battleship.png");
     -fx-background-repeat:no-repeat;
     -fx-background-size: 100%;
     -fx-max-width: infinity;
