--- a/src/battleship/views/FXMLMain.fxml
+++ b/src/battleship/views/FXMLMain.fxml
@@ -18,36 +18,36 @@
         <rowConstraints>
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="10.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="10.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="10.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="10.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="10.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="10.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="10.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="10.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
               <Label fx:id="title" alignment="CENTER" contentDisplay="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" text="Battle Ship" textAlignment="CENTER" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
                  <font>
-                    <Font name="Times New Roman Bold" size="100" />
+                    <Font name="Times New Roman Bold" size="100.0" />
                  </font>
                <padding>
-                  <Insets bottom="10.0" right="10.0" top="10.0" />
+                  <Insets bottom="5.0" top="5.0" />
                </padding>
               </Label>
               <Button fx:id="play" alignment="CENTER" contentDisplay="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" onAction="#setScene" text="Play" GridPane.rowIndex="2">
                <padding>
-                  <Insets bottom="10.0" right="10.0" top="10.0" />
+                  <Insets bottom="5.0" top="5.0" />
                </padding></Button>
               <Button fx:id="resume" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" onAction="#setScene" text="Resume" GridPane.rowIndex="4">
                <padding>
-                  <Insets bottom="10.0" right="10.0" top="10.0" />
+                  <Insets bottom="5.0" top="5.0" />
                </padding>
             </Button>
               <Button fx:id="settings" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" onAction="#setScene" text="Settings" GridPane.rowIndex="6">
                <padding>
-                  <Insets bottom="10.0" right="10.0" top="10.0" />
+                  <Insets bottom="5.0" top="5.0" />
                </padding>
             </Button>
               <Button fx:id="exit" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Quit" GridPane.rowIndex="8">
