--- a/src/assets/stylesheets/fxmlplay.css
+++ b/src/assets/stylesheets/fxmlplay.css
@@ -3,8 +3,18 @@
  -fx-background-size: 100% 100%;
 }
 
-.button{
+.button {
     -fx-border-color: black;
     -fx-background-color: black;
     -fx-text-fill: white;
+}
+#logicView {
+    -fx-border-color: gray;
+}
+#shipView {
+    -fx-border-color: gray;
+}
+
+#main {
+    -fx-border-color: gray;
 }
