--- a/assets/stylesheets/battleshipgame.css
+++ b/assets/stylesheets/battleshipgame.css
@@ -2,6 +2,37 @@
  -fx-background-image: url("../images/water/Ocean2.gif");
  -fx-background-size: 100% 100%;
 }
+.scroll-pane {
+    -fx-focus-color: transparent;
+    -fx-border-color: transparent;
+    -fx-background-color: transparent
+}
+
+.scroll-pane .viewport {
+    -fx-border-color: transparent;
+    -fx-background-color: rgba(0, 0, 0, 1);
+    -fx-opacity: 0.8;
+    -fx-focus-color: transparent;
+    -fx-text-fill: white;
+    -fx-font-weight: bold;
+    -fx-font-size: small;
+}
+
+.scroll-pane {
+    -fx-focus-color: rgba(0, 0, 0, 1);
+}
+
+.scroll-bar:vertical {
+    -fx-background-color:black;
+}
+
+.scroll-bar:vertical .track {
+    -fx-background-color: gray;
+}
+
+.scroll-bar:vertical .thumb {
+    -fx-background-color: black;
+}
 
 .button:focused {
     -fx-background-insets: 0;
