--- a/assets/stylesheets/shipselection.css
+++ b/assets/stylesheets/shipselection.css
@@ -1,5 +1,5 @@
 #shipSelectionPane {
- -fx-background-image: url("../images/water/Ocean2.gif");
+ -fx-background-image: url("../images/water/ocean2.gif");
  -fx-background-size: 100% 100%;
 }
 
